e2e/t/legal-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: dummy
spec:
  endpointSelector: {}
  ingress:
  - fromCIDRSet:
    - cidr: 10.72.16.0/20
    - cidr: 10.76.16.0/20
    - cidr: 10.78.16.0/20
