e2e/t/world-entity-allow-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: dummy
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - world
